--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (3.2.4) stable; urgency=low
+
+  * Remove bc package dependency.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 28 Nov 2016 17:02:45 +0100
+
 openmediavault-nut (3.2.3) stable; urgency=low
 
   * Add missing logrotate configuration.
