Set user home directory mask to 0700 in RPC UserMgmt::setSettings.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.54) stable; urgency=low
 
   * Improve statistic graph colors for color blind users.
+  * Set user home directory mask to 0700 in RPC UserMgmt::setSettings.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 20 Nov 2016 22:56:38 +0100
 
