--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.55) stable; urgency=low
+
+  * Mantis 0001648: Error adding drive to raid 5 array.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 02 Dec 2016 17:33:27 +0100
+
 openmediavault (3.0.54) stable; urgency=low
 
   * Improve statistic graph colors for color blind users.
